# roadvision-ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: datasets.yaml  train.yaml
data/: README.md
docs/: engineering_design.md
scripts/: download_dataset.py
src/roadvision/application/: prepare_dataset.py
src/roadvision/common/config/: __init__.py  exceptions.py  loader.py
src/roadvision/data/: __init__.py  downloader.py  exceptions.py  extractor.py  integrity.py  manager.py  metadata.py  registry.py  source.py  validator.py
tests/common/config/: test_loader.py
tests/data/: test_downloader.py  test_extractor.py  test_inspector.py  test_integrity.py  test_manager.py  test_registry.py  test_source.py  test_validator.py
